--- a/gb/23/7/3/n14027493.md
+++ b/gb/23/7/3/n14027493.md
@@ -1,64 +1,54 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>高市公园处揭牌 张博洋盼盘点城市空间</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/07/id14027494-622481-600x400.jpg" />
 <h6>高雄市工务局3日新成立“公园处”，工务局表示，未来公园处工作重点包括提升强化公园绿化路灯等公共设施管理品质。（高雄市工务局提供／中央社）
 </h6>
 <hr>
-<p>【大纪元2023年07月03日讯】（大纪元记者袁世钢台湾高雄报导）<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%AB%98%E9%9B%84%E5%B8%82.md#1">高雄市</a>现有834座公园，行道树超过20万棵，有鉴于工务局原有的养护工程处业务范围繁杂，高雄市长陈其迈2018年竞选时即提出成立专责的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%AC%E5%9B%AD%E5%A4%84.md#1">公园处</a>政见。公园处今年7月起正式揭牌，与<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%BB%E5%B7%A5%E5%A4%84.md#1">养工处</a>一分为二，将专责树木养护、公园管理等业务，处长由工务局副局长吴瑞川暂代。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%AB%98%E9%9B%84%E5%B8%82.md#1">高雄市</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%AC%E5%9B%AD%E5%A4%84.md#1">公园处</a>3日正式揭牌，原本的养护工程处则更名为道路养护工程处，将树木养护、公园管理等业务分割给公园处，正式编制人员也一分为二，各有百余人，277名职工也平均分配。工务局长杨钦富表示，世界潮流与都市发展，对于开放空间与绿地都非常重视，因此市府把“公园”与“道路”分开管理，层级从科提升为处。</p>
-<p>不过，公园处长一职目前仍悬缺，暂由工务局副局长吴瑞川代理。杨钦富说，市府会寻找对公园、生态治理方面更适合、专业的人选；至于<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8A%A4%E6%A0%91.md#1">护树</a>团体认为有人员编制不足的问题，他强调，未来会再增加人手，朝向最精致的方式专业分工。</p>
-<p>对此，台湾基进高雄市议员<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BC%A0%E5%8D%9A%E6%B4%8B.md#1">张博洋</a>表示，过去的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%BB%E5%B7%A5%E5%A4%84.md#1">养工处</a>是“什么都管，什么都不奇怪”，从公园、路灯到道路皆是业务范围，他对公园处寄与厚望，但百余人管理超过800个公园绿地仍是极大挑战；他担忧，不论是树木照护、道路刨铺品质，或是公园改造的公民参与，时常会因为求快速有效而被轻忽。</p>
-<p>在选前曾连署支持推展儿童参与、提升公园品质的“还我特色公园行动联盟”所提出4项建议的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BC%A0%E5%8D%9A%E6%B4%8B.md#1">张博洋</a>强调，连署内容包含“设置遮荫、戏水空间且优先采用自然铺面”、“成立儿童游戏推动专责窗口，盘点城市空间”、“导入游戏空间营运思维”、“儿童实质参与入法化”，非常值得公园处的成立做参考。</p>
+<p>【大纪元2023年07月03日讯】（大纪元记者袁世钢台湾高雄报导）高雄市现有834座公园，行道树超过20万棵，有鉴于工务局原有的养护工程处业务范围繁杂，高雄市长陈其迈2018年竞选时即提出成立专责的公园处政见。公园处今年7月起正式揭牌，与养工处一分为二，将专责树木养护、公园管理等业务，处长由工务局副局长吴瑞川暂代。</p>
+<p>高雄市公园处3日正式揭牌，原本的养护工程处则更名为道路养护工程处，将树木养护、公园管理等业务分割给公园处，正式编制人员也一分为二，各有百余人，277名职工也平均分配。工务局长杨钦富表示，世界潮流与都市发展，对于开放空间与绿地都非常重视，因此市府把“公园”与“道路”分开管理，层级从科提升为处。</p>
+<p>不过，公园处长一职目前仍悬缺，暂由工务局副局长吴瑞川代理。杨钦富说，市府会寻找对公园、生态治理方面更适合、专业的人选；至于护树团体认为有人员编制不足的问题，他强调，未来会再增加人手，朝向最精致的方式专业分工。</p>
+<p>对此，台湾基进高雄市议员张博洋表示，过去的养工处是“什么都管，什么都不奇怪”，从公园、路灯到道路皆是业务范围，他对公园处寄与厚望，但百余人管理超过800个公园绿地仍是极大挑战；他担忧，不论是树木照护、道路刨铺品质，或是公园改造的公民参与，时常会因为求快速有效而被轻忽。</p>
+<p>在选前曾连署支持推展儿童参与、提升公园品质的“还我特色公园行动联盟”所提出4项建议的张博洋强调，连署内容包含“设置遮荫、戏水空间且优先采用自然铺面”、“成立儿童游戏推动专责窗口，盘点城市空间”、“导入游戏空间营运思维”、“儿童实质参与入法化”，非常值得公园处的成立做参考。</p>
 <p>尤其高雄市目前正如火如荼推动特色公园，张博洋认为，此时特别需要专责单位盘点城市空间，让公园内的机能能够相辅相成，避免2个邻近公园内的设施高度重叠，透过“跨公园整合”，让高雄市的儿童游戏空间符合不同年龄层需求，兼顾儿童游具的挑战性与身心障碍儿童游戏权利等各种不同的需求。◇</p>
 <p>责任编辑：陈玟绮</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/12/n13883322.md#1">蒋万安公布小内阁 柯文哲：风格跟我满像</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/23/n13890574.md#1">卖场新年囤货恐阻逃生 高市启动稽查最重罚30万</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13902980.md#1">强拆拉瓦克部落 法院判高市府违法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/6/n13966694.md#1">民进党前中执委高雄豪宅占地千坪 立委质疑农地违建</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/7/n13967494.md#1">台电台北南区处长交接 由杨显辉接任</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/22/n14001969.md#1">电动车业务误导车主私设充电桩？ 台议员吁市府提供指引</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/28/n14024147.md#1">高雄美丽岛商圈屋龄逾50年 盼加速危老重建</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/3/n14027342.md#1">黑猩猩家改建 “光室咖啡”体验铁笼内新视角</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/3/n14027287.md#1">皮影戏馆暑假大冒险 走入魔兽皮偶世界</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/30/n14025534.md#1">寿山动物园FUN暑假 全国12岁以下免费入园</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/12/n13883322.md#1">蒋万安公布小内阁 柯文哲：风格跟我满像</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/23/n13890574.md#1">卖场新年囤货恐阻逃生 高市启动稽查最重罚30万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/9/n13902980.md#1">强拆拉瓦克部落 法院判高市府违法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/6/n13966694.md#1">民进党前中执委高雄豪宅占地千坪 立委质疑农地违建</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/7/n13967494.md#1">台电台北南区处长交接 由杨显辉接任</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/22/n14001969.md#1">电动车业务误导车主私设充电桩？ 台议员吁市府提供指引</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/28/n14024147.md#1">高雄美丽岛商圈屋龄逾50年 盼加速危老重建</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309657.md#1">高雄知名汽旅遭爆偷拍 插座藏镜头、记忆卡正对床位</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309632.md#1">自力造筏比创意 好手齐聚大港桥拿奖金</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309354.md#1">美浓油纸伞站上国际舞台 美丽背后的故事</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/2/n10186094.md#1" target="_blank">林辉：天安门杀毛案疑点重重 侦案者冤狱七年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/11/n11315892.md#1" target="_blank">河北一位电器维修师无悔的信念</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/20/n10157890.md#1" target="_blank">沉静：切·格瓦拉——魔幻偶像（四）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/30/n11488663.md#1" target="_blank">寻获生命真谛 法国医院院长分享修炼感悟</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/29/n14024670.md#1">父亲称被外星人绑架 美国男子从取笑到相信</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/26/n14022984.md#1">【未解之谜】孙储琳──90年代特异功能大师（下）意念的“威力”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/26/n14022994.md#1">爱尔兰女子10年前做梦 预知泰坦号事故？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/23/n14021395.md#1">【天道有知】善恶报应何时报 神佛皆有安排</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/27/n14023428.md#1">过了夏至 长夏到 如何养心又养脾胃？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/1/n14026333.md#1">【拍案惊奇】“光刻机”卡中共 C919又出故障？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/1/n14026430.md#1">【探索时分】瑞典援乌鹰狮 鹰狮曾大胜苏-27</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/1/n14026427.md#1">【新闻五人行】防兵变？中共密集出台“毒法”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/30/n14025979.md#1">更多ASML光刻机被限出口 打击中共野心</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/30/n14025960.md#1">陆男星蔡徐坤被爆性丑闻 《奔跑吧》受累停播</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/1/n14026188.md#1">专家：七一重提苏共垮台 习近平忧重蹈覆辙</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/30/n14025677.md#1">詹雅雯高铁站遭撞飞伤到肋骨 痛得当场大哭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/30/n14025960.md#1">陆男星蔡徐坤被爆性丑闻 《奔跑吧》受累停播</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/30/n14025897.md#1">郑秀文新冠后遗症未愈 13场红馆演唱会延期</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/30/n14025910.md#1">89岁艾伦?阿金辞世 曾与赫本合作主演电影</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/30/n14025373.md#1">曾遭原子弹轰炸 日本尚未确定上映《奥本海默》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/29/n14025207.md#1">母亲去年在大陆染疫亡 美华人仍难摆脱阴影</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/1/n14026026.md#1">植牙机器人问世 如何选择植牙医生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/30/n14025380.md#1">做梦大喊大叫、拳打脚踢 常做噩梦警惕4种严重疾病</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/1/n14026114.md#1">人们离开加州的根本原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/30/n14025612.md#1">搭机如何克服时差？ 吃巧克力可能是关键</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307329.md#1">【百年真相】从资本家到右派 李康年真话代价</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308353.md#1">【马克时空】乌军以牙还牙 越境攻击俄库尔斯克</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307706.md#1">《死侍与金钢狼》票房破9亿 周末有望达10亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/23/n14296647.md#1">知名医院主治医师：五种癌症可早期预防</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306483.md#1">为何天气炎热时比较不会感觉饿？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307219.md#1">如何去除衣服上的防晒乳污渍？ 这一物有奇效</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/3/n14027493.htm">高市公园处揭牌 张博洋盼盘点城市空间</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/7/3/n14027493.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/3/n14027493.htm">高市公园处揭牌 张博洋盼盘点城市空间</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/7/3/n14027493.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
